[metadata]
name = angle-viewer
version = 0.1.0
description = Interactive angle viewer and labeler for HMS/SHMS plots
author = Casey Morean
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mrcmor100/angle-viewer

[options]
packages = find:
install_requires =
    pygame

[options.entry_points]
console_scripts =
    angle-viewer = angle_viewer.cli:main
